import { expect, test } from "bun:test";
import { createHash } from "node:crypto";
import { renderManual } from "../src/folder/manual";
import { presetProfile } from "../src/folder/presets";
import { planInstructions } from "../src/folder/reconcile";
import { renderInstructions } from "../src/folder/render";
import { bindings } from "./fixtures/machine-bindings";

// Every preset on every OS it is offered for, in both languages.
export const journeys = [
  { preset: "local", machine: null, os: "windows" },
  { preset: "local", machine: null, os: "macos" },
  { preset: "hosted-personal", machine: bindings.personal, os: "linux" },
  {
    preset: "hosted-organization-personal",
    machine: bindings.organization,
    os: "linux",
  },
  { preset: "hosted-organization-team", machine: bindings.team, os: "linux" },
] as const;

test("all launch journeys render both languages without undefined fragments", () => {
  for (const journey of journeys) {
    for (const locale of ["cs", "en"] as const) {
      const input = {
        preset: journey.preset,
        machine: journey.machine,
        profile: presetProfile(journey.preset, journey.os, { locale }),
      };
      const output = renderInstructions(input);
      expect(output).not.toContain("undefined");
      expect(output).toEqual(renderInstructions(input));
      expect(output).toContain(
        locale === "cs"
          ? "Profil neuděluje přístup"
          : "A profile grants no access",
      );
      expect(output.endsWith("\n")).toBe(true);
    }
  }
});

test("localized profile output deterministically feeds reconciliation", () => {
  const profile = presetProfile("hosted-organization-team", "linux", {
    locale: "cs",
    detail: "technical",
    coordination: "coordinator",
  });
  const source = {
    preset: "hosted-organization-team",
    machine: bindings.team,
    profile,
  };
  const cs = renderInstructions(source);
  const en = renderInstructions({
    ...source,
    profile: { ...profile, locale: "en" },
  });
  expect(cs).toContain("Komunikuj česky");
  expect(en).toContain("Communicate in English");
  expect(cs).not.toEqual(en);
  const reordered = Object.fromEntries(Object.entries(profile).reverse());
  expect(renderInstructions({ ...source, profile: reordered })).toEqual(cs);
  for (const output of [cs, en]) {
    expect(output).toContain("Organizations");
    expect(output).toContain("Personalspace");
    const digest = createHash("sha256").update(output).digest("hex");
    expect(
      planInstructions("AGENTS.md", null, digest, { kind: "absent" }),
    ).toEqual({ kind: "create", path: "AGENTS.md" });
    expect(
      planInstructions("AGENTS.md", digest, digest, {
        kind: "regular",
        digest,
      }),
    ).toEqual({ kind: "unchanged" });
  }
  expect(() =>
    renderInstructions({
      ...source,
      profile: { ...profile, locale: "invalid" },
    }),
  ).toThrow();
  // A preset the Machine does not allow never renders.
  expect(() =>
    renderInstructions({ ...source, preset: "hosted-personal" }),
  ).toThrow("not allowed");
  expect(() => renderInstructions({ ...source, machine: null })).toThrow(
    "not allowed",
  );
});

// The generated document per preset and language, on the OS each preset is
// offered for. Review the snapshot when the wording changes deliberately.
for (const journey of journeys.filter((entry) => entry.os !== "windows"))
  for (const locale of ["cs", "en"] as const)
    test(`rendered AGENTS.md snapshot: ${journey.preset} / ${locale}`, () => {
      expect(
        renderInstructions({
          preset: journey.preset,
          machine: journey.machine,
          profile: presetProfile(journey.preset, journey.os, { locale }),
        }),
      ).toMatchSnapshot();
    });

test("relationships render only when the recorded binding carries them, one line per peer", () => {
  const profile = presetProfile("hosted-personal", "linux");
  const plain = renderInstructions({
    preset: "hosted-personal",
    machine: bindings.personal,
    profile,
  });
  expect(plain).not.toContain("### Tailnet peers");
  const related = renderInstructions({
    preset: "hosted-personal",
    machine: bindings.personalRelated,
    profile,
  });
  expect(related).toContain("### Tailnet peers");
  expect(related).toContain(
    "- `example-laptop` (client device, personal zone): SSH both ways with `example-laptop.tailnet.example.invalid`; no HTTPS.",
  );
  expect(related).toContain(
    "- `example-workspace` (work Remote Environment, work zone, Organization `example`): SSH from here to `example-workspace.tailnet.example.invalid` as `operator`; HTTPS `launchpad.example-workspace.example.lazurio.io`.",
  );
  expect(related).toContain("Headscale enforces them, Lazurio does not.");
  expect(related).toMatchSnapshot();
  const work = renderInstructions({
    preset: "hosted-organization-personal",
    machine: bindings.related,
    profile: presetProfile("hosted-organization-personal", "linux", {
      locale: "cs",
    }),
  });
  expect(work).toContain("### Peers v tailnetu");
  expect(work).toContain(
    "- `example` (osobní Remote Environment, osobní zóna): SSH sem z `example.tailnet.example.invalid` jako `operator`; bez HTTPS.",
  );
  expect(work).toContain(
    "- `example-gateway` (Conglomerate Host, Organizace `example`): bez SSH; HTTPS `auth.example.lazurio.io`.",
  );
});

// owner.assignment (Machines v0.12.61) is rendered exactly as recorded and
// only when present; the Owner line rule is unchanged by it.
test("the Assignment line renders the handover's owner.assignment and nothing else", () => {
  const without = renderInstructions({
    preset: "hosted-organization-personal",
    machine: bindings.organization,
    profile: presetProfile("hosted-organization-personal", "linux"),
  });
  expect(without).not.toContain("Assignment");
  const operator = renderInstructions({
    preset: "hosted-organization-personal",
    machine: bindings.assignedOperator,
    profile: presetProfile("hosted-organization-personal", "linux"),
  });
  expect(operator).toContain(
    "- Assignment: assigned to operator `example` (GitHub id 12345).",
  );
  expect(operator).toContain("- Owner: Organization `example`.\n");
  expect(operator).not.toContain("sample-team");
  expect(operator).toMatchSnapshot();
  const team = renderInstructions({
    preset: "hosted-organization-team",
    machine: bindings.assignedTeam,
    profile: presetProfile("hosted-organization-team", "linux"),
  });
  expect(team).toContain("- Assignment: shared by the Team.");
  expect(team).toContain("Team `sample-team`");
  expect(team).toMatchSnapshot();
  expect(
    renderInstructions({
      preset: "hosted-organization-team",
      machine: bindings.assignedTeam,
      profile: presetProfile("hosted-organization-team", "linux", {
        locale: "cs",
      }),
    }),
  ).toContain("- Přiřazení: sdílený Teamem.");
  expect(
    renderInstructions({
      preset: "hosted-organization-personal",
      machine: bindings.assignedOperator,
      profile: presetProfile("hosted-organization-personal", "linux", {
        locale: "cs",
      }),
    }),
  ).toContain(
    "- Přiřazení: přiřazený Operátorovi `example` (GitHub id 12345).",
  );
});

// The real canary shape: a Team-bearing handover on an individual work VM,
// adopted with the explicit personal preset. The binding keeps the Team; the
// Owner line names it only under hosted-organization-team.
test("the Owner line names the Team only under hosted-organization-team", () => {
  for (const locale of ["cs", "en"] as const) {
    const personal = renderInstructions({
      preset: "hosted-organization-personal",
      machine: bindings.team,
      profile: presetProfile("hosted-organization-personal", "linux", {
        locale,
      }),
    });
    expect(personal).toContain(
      locale === "cs"
        ? "- Owner: Organizace `example`.\n"
        : "- Owner: Organization `example`.\n",
    );
    expect(personal).not.toContain("sample-team");
    expect(personal).toEqual(
      renderInstructions({
        preset: "hosted-organization-personal",
        machine: bindings.organization,
        profile: presetProfile("hosted-organization-personal", "linux", {
          locale,
        }),
      }),
    );
    expect(
      renderInstructions({
        preset: "hosted-organization-team",
        machine: bindings.team,
        profile: presetProfile("hosted-organization-team", "linux", { locale }),
      }),
    ).toContain("Team `sample-team`");
  }
  expect(
    renderInstructions({
      preset: "hosted-organization-personal",
      machine: bindings.team,
      profile: presetProfile("hosted-organization-personal", "linux"),
    }),
  ).toMatchSnapshot();
});

// Decision 0161 / F17: the generated AGENTS.md rule and the manual section it
// points at say the same thing on every hosted preset — the pin owns the
// product and the Folder, the operator owns the tools, an agent updates a
// tool only on explicit instruction — and the old "no self-update of any
// tool" wording is gone from both.
test("the hosted update rule in AGENTS.md agrees with the manual under decisions 0161 and F17", () => {
  for (const journey of journeys) {
    if (journey.machine === null) continue;
    for (const locale of ["cs", "en"] as const) {
      const profile = presetProfile(journey.preset, journey.os, { locale });
      const instructions = renderInstructions({
        preset: journey.preset,
        machine: journey.machine,
        profile,
      });
      const manual = renderManual({
        preset: journey.preset,
        machine: journey.machine,
        profile,
      })["manual/troubleshooting.md"] as string;
      for (const text of [instructions, manual]) {
        expect(text).toMatch(/decisions? 0161/);
        expect(text).not.toMatch(/žádný self-update|any self-update/);
        expect(text).toMatch(
          locale === "cs"
            ? /výslovný pokyn Principála/
            : /Principal's explicit instruction/,
        );
      }
      // Decision F17 addendum 2026-09-28: the operator owns the version of
      // Lazurio too; the pin is a minimum.
      expect(instructions).toMatch(
        locale === "cs"
          ? /Verzi Lazuria vlastní operátor: .*Pin provozovatele hostingu \(Lazurio Machines\) je jen minimum.*Nástroje operátora \(Codex, Claude Code, `gh`, Node, npm, Bun…\) aktualizuj jen na výslovný pokyn Principála/
          : /The operator owns the version of Lazurio: .*The hosting operator's pin \(Lazurio Machines\) is only a minimum.*Update the operator's tools \(Codex, Claude Code, `gh`, Node, npm, Bun…\) only on the Principal's explicit instruction/,
      );
    }
  }
});
