// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`rendered AGENTS.md snapshot: local / cs 1`] = `
"# Lazurio
<!-- base-instructions-15; {"preset":"local","profile":{"os":"macos","access":"local","purpose":"human","locale":"cs","detail":"concise","coordination":"direct"}} -->
## Tenhle Environment
- Preset: \`local\` (verze 1).
- Pracovní stanice Principála bez handoveru; Owner i Principál je přihlášený uživatel.
## Hranice
- Personalspace: \`personalspace/\` je intimní prostor právě jednoho Principála a jeho volitelného Buddyho. Nikdo cizí ho nečte a nikdy se nesdílí.
- Organizace: repozitáře žijí v \`organizations/<org>/\`; každá Organizace je vlastní access hranice a vlastní git repozitář.
- Identita: Principálova vlastní přihlášení; GitHub je jediná autorita přístupů.
## Jak se tu pracuje
- Komunikuj česky, pokud uživatel nepožádá jinak.
- Lidem říkej tomu, kde pracuješ, Environment (ten Environment, na tomto Environmentu) a hostovanému Remote Environment; slova Mašina, VM ani server jim neříkej. Machine zůstává technický pojem pro hranici, na které Environment běží (příkazy jako \`lazurio machine …\`, identifikátory, architektura).
- Začni výsledkem a vysvětluj stručně.
- Pracuj přímo v rozsahu zadání a dostupných nástrojů.
- Tvoje práce je Draft ve worktree a pull requestu; Publikace (merge, nasazení, odeslání) patří Principálovi a vyžaduje jeho explicitní pokyn v aktuálním threadu.
- Otevřenou otázku, nejistotu nebo nález, který nejde hned vyřešit, zapiš bez ptaní jako GitHub Issue do přesného owning repozitáře a jeho URL uveď v handoffu. Předtím zkontroluj duplicity a odstraň secrets, Personalspace a obsah Organizace, který do toho repozitáře nepatří. Pak pokračuj na všem, co na odpovědi nestojí; zastav se jen tam, kde bez ní nejde pokračovat bezpečně nebo kde rozhodnutí patří Principálovi. Issue bez pokynu Principála nezavírej, nepřiřazuj ani neprioritizuj; plán, priorita a odpovědnost patří do Mission Controlu Organizace (\`manual/working-here.md\`).
- Nálezy z review přijímej s úsudkem. Skutečnou vadu oprav hned: špatné chování, rozpor mezi texty, tvrzení bez důkazu, únik citlivého obsahu. Na drobnost bez dopadu, spekulaci o budoucí změně nebo rozšíření záběru PR neodpovídej dalším kolem oprav, ale věcnou námitkou v PR, a požádej o verdikt na nezměněném headu. Trvá-li reviewer na svém, předlož obě stanoviska Principálovi; review ani branch rules nikdy neobcházej.
- Před prací v Organizaci načti její aktuální AGENTS.md v \`organizations/<org>/\`; pravidla Organizace platí uvnitř jejího checkoutu a tenhle dokument je nenahrazuje. Z rootu Folderu se v konkrétní Organizaci nepracuje.
- Ověř systém Environmentu, na kterém pracuješ (macos); přístup local nemění identitu ani oprávnění. Pro připojené operace ověř živou identitu a práva; lokální checkout není důkaz oprávnění.
- Profil neuděluje přístup, publikační mandát ani oprávnění k práci na pozadí. Nečti cizí Personalspace a nekopíruj přihlašovací údaje.
- Zachovej existující cesty a obsah Organizations a Personalspace. Jazyk profilu nepřejmenovává složky ani nepřekládá uživatelská data.
- Chybějící nástroje, neověřená práva a neznámý stav přiznej; nevymýšlej dostupné schopnosti ani úspěšné dokončení.
## Nástroje
Používej nejdřív tahle CLI z katalogu Lazuria, jak je popisuje \`manual/this-machine.md\`. Uvedený nástroj je kontext: neuděluje přístup, nic neinstaluje a nepinuje verzi.
- \`gh\` (povinný): GitHub CLI pro práci s repozitáři, pull requesty, issues a review.
MCP servery přicházejí na řadu až po CLI z katalogu: zjisti ve svém harnessu, které nabízí, a použij je tam, kde úkol žádné CLI z katalogu nepokrývá. Do Folderu se MCP servery nikdy nezapisují a dostupný server není souhlas s Publikací.
## Manuál
Úplný manuál pro agenty na tomhle Environmentu je v \`manual/\` (generuje ho produkt, needituj ho):
- [Lazurio](manual/lazurio.md) — co je Lazurio, model spolupráce a jeho hranice.
- [Tenhle Environment](manual/this-machine.md) — druh, Owner, preset, zóny, co kam smí, zapnuté nástroje a SSH na další Environmenty a zařízení.
- [Jak se tu pracuje](manual/working-here.md) — Draft, Publikace, worktrees, nálezy z review, handoff, otevřené otázky a kam patří poznatky.
- [Role](manual/roles.md) — Principál, Kolega, role v Organizaci, Owner, Buddy, Task Agent.
- [Slovník](manual/glossary.md) — pojmy, které agent na Environmentu potřebuje.
- [Řešení problémů](manual/troubleshooting.md) — aktualizace produktu a obsahu, identita Environmentu, odmítnutí a hlášení problémů.
"
`;

exports[`rendered AGENTS.md snapshot: local / en 1`] = `
"# Lazurio
<!-- base-instructions-15; {"preset":"local","profile":{"os":"macos","access":"local","purpose":"human","locale":"en","detail":"concise","coordination":"direct"}} -->
## This Environment
- Preset: \`local\` (version 1).
- The Principal's own workstation, no handover; the signed-in user is both Owner and Principal.
## Boundaries
- Personalspace: \`personalspace/\` is the intimate space of exactly one Principal and their optional Buddy. Nobody else reads it and it is never shared.
- Organizations: repositories live under \`organizations/<org>/\`; each Organization is its own access boundary and its own git repository.
- Identity: the Principal's own sign-ins; GitHub is the only access authority.
## How work is done here
- Communicate in English unless the user requests otherwise.
- Towards people, call the place you work in the Environment, and a hosted one a Remote Environment; do not say Machine, VM or server to them. Machine stays the technical term for the boundary an Environment runs on (commands such as \`lazurio machine …\`, identifiers, the architecture).
- Lead with the outcome and explain concisely.
- Work directly within task scope and available tools.
- Your work is a Draft in a worktree and a pull request; Publication (merge, deploy, send) belongs to the Principal and needs their explicit instruction in the current thread.
- File an open question, uncertainty or finding that cannot be resolved right away as a GitHub Issue in the exact owning repository, without asking first, and give its URL in the handoff. Before that, check for duplicates and remove secrets, Personalspace and Organization content that does not belong in that repository. Then continue with everything that does not depend on the answer; stop only where you cannot continue safely without it or where the decision belongs to the Principal. Do not close, assign or prioritize an issue without the Principal's instruction; plan, priority and responsibility belong in the Organization's Mission Control (\`manual/working-here.md\`).
- Take review findings with judgment. Fix a real defect at once: wrong behavior, a contradiction between texts, a claim without proof, a leak of sensitive content. Answer trivia without impact, speculation about a future change or a widening of the PR's scope not with another round of fixes but with a factual objection on the PR, and ask for a verdict on the unchanged head. If the reviewer still insists, put both positions to the Principal; never bypass the review or the branch rules.
- Before Organization work, load its current AGENTS.md under \`organizations/<org>/\`; the Organization's rules apply inside its checkout and this document does not replace them. Never work in a specific Organization from the Folder root.
- Verify the OS of the Environment you work in (macos); local access changes neither identity nor permissions. Verify live identity and rights for connected operations; a local checkout is not proof of permission.
- A profile grants no access, publication mandate or background-work authority. Do not read another Principal's Personalspace or copy credentials.
- Preserve existing Organizations and Personalspace paths and content. Profile language neither renames folders nor translates user data.
- Report missing tools, unverified rights and unknown state; do not invent available capabilities or successful completion.
## Tools
Use these CLIs of the Lazurio catalog first, as \`manual/this-machine.md\` describes them. A listed tool is context: it grants no access, installs nothing and pins no version.
- \`gh\` (required): GitHub CLI for work with repositories, pull requests, issues and reviews.
MCP servers come after the catalog CLIs: discover in your harness which ones it offers and use them where no catalog CLI covers the task. MCP servers are never recorded in the Folder, and an available server is not consent to Publication.
## Manual
The complete agent manual for this Environment is in \`manual/\` (generated by the product, do not edit):
- [Lazurio](manual/lazurio.md) — what Lazurio is, the collaboration model and its boundaries.
- [This Environment](manual/this-machine.md) — kind, Owner, preset, zones, what may reach what, enabled tools and SSH to other Environments and devices.
- [Working here](manual/working-here.md) — Draft, Publication, worktrees, review findings, handoff, open questions and where knowledge goes.
- [Roles](manual/roles.md) — Principal, Kolega, Organization roles, Owner, Buddy, Task Agent.
- [Glossary](manual/glossary.md) — the terms an agent in an Environment needs.
- [Troubleshooting](manual/troubleshooting.md) — product and content updates, the Environment's identity, refusals and reporting.
"
`;

exports[`rendered AGENTS.md snapshot: hosted-personal / cs 1`] = `
"# Lazurio
<!-- base-instructions-15; {"preset":"hosted-personal","profile":{"os":"linux","access":"remote","purpose":"human","locale":"cs","detail":"concise","coordination":"direct"}} -->
## Tenhle Environment
- Preset: \`hosted-personal\` (verze 1).
- Název: \`example\` (personal-vm).
- Owner: Principál s GitHub loginem \`example\` (id 12345). Je to jeho jediný osobní Remote Environment.
- Principál: Owner tohohle Environmentu. Agenti tu jednají za něj v jeho právech; Buddy je volitelný rezident téhož Environmentu.
- Tailnet: Headscale node \`example\`.
- Host: provider-estate \`example-estate\`; vyšší doména správy a obnovy než tenhle Environment.
## Hranice
- Personalspace: \`personalspace/\` je intimní prostor právě jednoho Principála a jeho volitelného Buddyho. Nikdo cizí ho nečte a nikdy se nesdílí.
- Organizace: na osobním Remote Environmentu nejsou namountovaná žádná repa Organizací. Práce v Organizaci (kód, repozitáře, běhy) probíhá přes SSH na pracovním Remote Environmentu, který ti Principál potvrdí jako přiřazený jemu; repozitáře Organizací sem nikdy neklonuj.
- Identita: Principálova vlastní přihlášení; GitHub je jediná autorita přístupů.
## Jak se tu pracuje
- Komunikuj česky, pokud uživatel nepožádá jinak.
- Lidem říkej tomu, kde pracuješ, Environment (ten Environment, na tomto Environmentu) a hostovanému Remote Environment; slova Mašina, VM ani server jim neříkej. Machine zůstává technický pojem pro hranici, na které Environment běží (příkazy jako \`lazurio machine …\`, identifikátory, architektura).
- Začni výsledkem a vysvětluj stručně.
- Pracuj přímo v rozsahu zadání a dostupných nástrojů.
- Tvoje práce je Draft ve worktree a pull requestu; Publikace (merge, nasazení, odeslání) patří Principálovi a vyžaduje jeho explicitní pokyn v aktuálním threadu.
- Otevřenou otázku, nejistotu nebo nález, který nejde hned vyřešit, zapiš bez ptaní jako GitHub Issue do přesného owning repozitáře a jeho URL uveď v handoffu. Předtím zkontroluj duplicity a odstraň secrets, Personalspace a obsah Organizace, který do toho repozitáře nepatří. Pak pokračuj na všem, co na odpovědi nestojí; zastav se jen tam, kde bez ní nejde pokračovat bezpečně nebo kde rozhodnutí patří Principálovi. Issue bez pokynu Principála nezavírej, nepřiřazuj ani neprioritizuj; plán, priorita a odpovědnost patří do Mission Controlu Organizace (\`manual/working-here.md\`).
- Nálezy z review přijímej s úsudkem. Skutečnou vadu oprav hned: špatné chování, rozpor mezi texty, tvrzení bez důkazu, únik citlivého obsahu. Na drobnost bez dopadu, spekulaci o budoucí změně nebo rozšíření záběru PR neodpovídej dalším kolem oprav, ale věcnou námitkou v PR, a požádej o verdikt na nezměněném headu. Trvá-li reviewer na svém, předlož obě stanoviska Principálovi; review ani branch rules nikdy neobcházej.
- Před prací v Organizaci načti její aktuální AGENTS.md v \`organizations/<org>/\`; pravidla Organizace platí uvnitř jejího checkoutu a tenhle dokument je nenahrazuje. Z rootu Folderu se v konkrétní Organizaci nepracuje.
- Ověř systém Environmentu, na kterém pracuješ (linux); přístup remote nemění identitu ani oprávnění. Pro připojené operace ověř živou identitu a práva; lokální checkout není důkaz oprávnění.
- Profil neuděluje přístup, publikační mandát ani oprávnění k práci na pozadí. Nečti cizí Personalspace a nekopíruj přihlašovací údaje.
- Zachovej existující cesty a obsah Organizations a Personalspace. Jazyk profilu nepřejmenovává složky ani nepřekládá uživatelská data.
- Chybějící nástroje, neověřená práva a neznámý stav přiznej; nevymýšlej dostupné schopnosti ani úspěšné dokončení.
- SSH na jiný Environment nebo zařízení jen na jeho tailnet hostname, s pinnutým host klíčem a po ověření aktivního tailnetu, nikdy na holou adresu \`100.64.0.x\` (\`manual/this-machine.md\`).
- Verzi Lazuria vlastní operátor: \`lazurio update\` spusť, když o to požádá; \`lazurio update status\` smíš kdykoli. Pin provozovatele hostingu (Lazurio Machines) je jen minimum a rollout verzi nikdy nesníží. Po aktualizaci obnoví tenhle Folder \`lazurio machine folder-refresh\`. Nástroje operátora (Codex, Claude Code, \`gh\`, Node, npm, Bun…) aktualizuj jen na výslovný pokyn Principála oficiálním instalátorem daného nástroje, jinak jen nahlas jejich verze (\`manual/troubleshooting.md\`, decisions 0161 a F17).
## Nástroje
Používej nejdřív tahle CLI z katalogu Lazuria, jak je popisuje \`manual/this-machine.md\`. Uvedený nástroj je kontext: neuděluje přístup, nic neinstaluje a nepinuje verzi.
- \`gh\` (povinný): GitHub CLI pro práci s repozitáři, pull requesty, issues a review.
MCP servery přicházejí na řadu až po CLI z katalogu: zjisti ve svém harnessu, které nabízí, a použij je tam, kde úkol žádné CLI z katalogu nepokrývá. Do Folderu se MCP servery nikdy nezapisují a dostupný server není souhlas s Publikací.
## Manuál
Úplný manuál pro agenty na tomhle Environmentu je v \`manual/\` (generuje ho produkt, needituj ho):
- [Lazurio](manual/lazurio.md) — co je Lazurio, model spolupráce a jeho hranice.
- [Tenhle Environment](manual/this-machine.md) — druh, Owner, preset, zóny, co kam smí, zapnuté nástroje a SSH na další Environmenty a zařízení.
- [Jak se tu pracuje](manual/working-here.md) — Draft, Publikace, worktrees, nálezy z review, handoff, otevřené otázky a kam patří poznatky.
- [Role](manual/roles.md) — Principál, Kolega, role v Organizaci, Owner, Buddy, Task Agent.
- [Slovník](manual/glossary.md) — pojmy, které agent na Environmentu potřebuje.
- [Řešení problémů](manual/troubleshooting.md) — aktualizace produktu a obsahu, identita Environmentu, odmítnutí a hlášení problémů.
"
`;

exports[`rendered AGENTS.md snapshot: hosted-personal / en 1`] = `
"# Lazurio
<!-- base-instructions-15; {"preset":"hosted-personal","profile":{"os":"linux","access":"remote","purpose":"human","locale":"en","detail":"concise","coordination":"direct"}} -->
## This Environment
- Preset: \`hosted-personal\` (version 1).
- Name: \`example\` (personal-vm).
- Owner: the Principal with GitHub login \`example\` (id 12345). This is their one personal Remote Environment.
- Principal: the Owner of this Environment. Agents here act for them within their rights; a Buddy is an optional resident of this same Environment.
- Tailnet: Headscale node \`example\`.
- Host: provider-estate \`example-estate\`; a higher administration and recovery domain than this Environment.
## Boundaries
- Personalspace: \`personalspace/\` is the intimate space of exactly one Principal and their optional Buddy. Nobody else reads it and it is never shared.
- Organizations: no Organization repositories are mounted in a personal Remote Environment. Organization work (code, repositories, runs) happens over SSH in a work Remote Environment the Principal confirms is assigned to them; never clone Organization repositories here.
- Identity: the Principal's own sign-ins; GitHub is the only access authority.
## How work is done here
- Communicate in English unless the user requests otherwise.
- Towards people, call the place you work in the Environment, and a hosted one a Remote Environment; do not say Machine, VM or server to them. Machine stays the technical term for the boundary an Environment runs on (commands such as \`lazurio machine …\`, identifiers, the architecture).
- Lead with the outcome and explain concisely.
- Work directly within task scope and available tools.
- Your work is a Draft in a worktree and a pull request; Publication (merge, deploy, send) belongs to the Principal and needs their explicit instruction in the current thread.
- File an open question, uncertainty or finding that cannot be resolved right away as a GitHub Issue in the exact owning repository, without asking first, and give its URL in the handoff. Before that, check for duplicates and remove secrets, Personalspace and Organization content that does not belong in that repository. Then continue with everything that does not depend on the answer; stop only where you cannot continue safely without it or where the decision belongs to the Principal. Do not close, assign or prioritize an issue without the Principal's instruction; plan, priority and responsibility belong in the Organization's Mission Control (\`manual/working-here.md\`).
- Take review findings with judgment. Fix a real defect at once: wrong behavior, a contradiction between texts, a claim without proof, a leak of sensitive content. Answer trivia without impact, speculation about a future change or a widening of the PR's scope not with another round of fixes but with a factual objection on the PR, and ask for a verdict on the unchanged head. If the reviewer still insists, put both positions to the Principal; never bypass the review or the branch rules.
- Before Organization work, load its current AGENTS.md under \`organizations/<org>/\`; the Organization's rules apply inside its checkout and this document does not replace them. Never work in a specific Organization from the Folder root.
- Verify the OS of the Environment you work in (linux); remote access changes neither identity nor permissions. Verify live identity and rights for connected operations; a local checkout is not proof of permission.
- A profile grants no access, publication mandate or background-work authority. Do not read another Principal's Personalspace or copy credentials.
- Preserve existing Organizations and Personalspace paths and content. Profile language neither renames folders nor translates user data.
- Report missing tools, unverified rights and unknown state; do not invent available capabilities or successful completion.
- SSH to another Environment or device only to its tailnet hostname, with a pinned host key and after verifying the active tailnet, never to a bare \`100.64.0.x\` address (\`manual/this-machine.md\`).
- The operator owns the version of Lazurio: run \`lazurio update\` when they ask for it; \`lazurio update status\` is free to use. The hosting operator's pin (Lazurio Machines) is only a minimum, and a rollout never lowers a version. After an update, \`lazurio machine folder-refresh\` refreshes this Folder. Update the operator's tools (Codex, Claude Code, \`gh\`, Node, npm, Bun…) only on the Principal's explicit instruction with that tool's official installer, otherwise only report their versions (\`manual/troubleshooting.md\`, decisions 0161 and F17).
## Tools
Use these CLIs of the Lazurio catalog first, as \`manual/this-machine.md\` describes them. A listed tool is context: it grants no access, installs nothing and pins no version.
- \`gh\` (required): GitHub CLI for work with repositories, pull requests, issues and reviews.
MCP servers come after the catalog CLIs: discover in your harness which ones it offers and use them where no catalog CLI covers the task. MCP servers are never recorded in the Folder, and an available server is not consent to Publication.
## Manual
The complete agent manual for this Environment is in \`manual/\` (generated by the product, do not edit):
- [Lazurio](manual/lazurio.md) — what Lazurio is, the collaboration model and its boundaries.
- [This Environment](manual/this-machine.md) — kind, Owner, preset, zones, what may reach what, enabled tools and SSH to other Environments and devices.
- [Working here](manual/working-here.md) — Draft, Publication, worktrees, review findings, handoff, open questions and where knowledge goes.
- [Roles](manual/roles.md) — Principal, Kolega, Organization roles, Owner, Buddy, Task Agent.
- [Glossary](manual/glossary.md) — the terms an agent in an Environment needs.
- [Troubleshooting](manual/troubleshooting.md) — product and content updates, the Environment's identity, refusals and reporting.
"
`;

exports[`rendered AGENTS.md snapshot: hosted-organization-personal / cs 1`] = `
"# Lazurio
<!-- base-instructions-15; {"preset":"hosted-organization-personal","profile":{"os":"linux","access":"remote","purpose":"human","locale":"cs","detail":"concise","coordination":"direct"}} -->
## Tenhle Environment
- Preset: \`hosted-organization-personal\` (verze 1).
- Název: \`workspace\` (workspace-vm).
- Owner: Organizace \`example\`.
- Principál: jediný Operátor, kterému Organizace tenhle pracovní Remote Environment přiřadila. Agenti jednají za něj v jeho živých právech.
- Tailnet: Headscale node \`example-workspace\`.
- Host: virtualization-host \`example-host\`; vyšší doména správy a obnovy než tenhle Environment.
## Hranice
- Personalspace: na Environmentu vlastněném Organizací nikdy není. Nezakládej ho, nemountuj ho a nekopíruj sem osobní data ani přihlášení.
- Organizace: repozitáře žijí v \`organizations/<org>/\`; každá Organizace je vlastní access hranice a vlastní git repozitář.
- Identita: Principálova vlastní přihlášení; GitHub je jediná autorita přístupů.
## Jak se tu pracuje
- Komunikuj česky, pokud uživatel nepožádá jinak.
- Lidem říkej tomu, kde pracuješ, Environment (ten Environment, na tomto Environmentu) a hostovanému Remote Environment; slova Mašina, VM ani server jim neříkej. Machine zůstává technický pojem pro hranici, na které Environment běží (příkazy jako \`lazurio machine …\`, identifikátory, architektura).
- Začni výsledkem a vysvětluj stručně.
- Pracuj přímo v rozsahu zadání a dostupných nástrojů.
- Tvoje práce je Draft ve worktree a pull requestu; Publikace (merge, nasazení, odeslání) patří Principálovi a vyžaduje jeho explicitní pokyn v aktuálním threadu.
- Otevřenou otázku, nejistotu nebo nález, který nejde hned vyřešit, zapiš bez ptaní jako GitHub Issue do přesného owning repozitáře a jeho URL uveď v handoffu. Předtím zkontroluj duplicity a odstraň secrets, Personalspace a obsah Organizace, který do toho repozitáře nepatří. Pak pokračuj na všem, co na odpovědi nestojí; zastav se jen tam, kde bez ní nejde pokračovat bezpečně nebo kde rozhodnutí patří Principálovi. Issue bez pokynu Principála nezavírej, nepřiřazuj ani neprioritizuj; plán, priorita a odpovědnost patří do Mission Controlu Organizace (\`manual/working-here.md\`).
- Nálezy z review přijímej s úsudkem. Skutečnou vadu oprav hned: špatné chování, rozpor mezi texty, tvrzení bez důkazu, únik citlivého obsahu. Na drobnost bez dopadu, spekulaci o budoucí změně nebo rozšíření záběru PR neodpovídej dalším kolem oprav, ale věcnou námitkou v PR, a požádej o verdikt na nezměněném headu. Trvá-li reviewer na svém, předlož obě stanoviska Principálovi; review ani branch rules nikdy neobcházej.
- Před prací v Organizaci načti její aktuální AGENTS.md v \`organizations/<org>/\`; pravidla Organizace platí uvnitř jejího checkoutu a tenhle dokument je nenahrazuje. Z rootu Folderu se v konkrétní Organizaci nepracuje.
- Ověř systém Environmentu, na kterém pracuješ (linux); přístup remote nemění identitu ani oprávnění. Pro připojené operace ověř živou identitu a práva; lokální checkout není důkaz oprávnění.
- Profil neuděluje přístup, publikační mandát ani oprávnění k práci na pozadí. Nečti cizí Personalspace a nekopíruj přihlašovací údaje.
- Zachovej existující cesty a obsah Organizations a Personalspace. Jazyk profilu nepřejmenovává složky ani nepřekládá uživatelská data.
- Chybějící nástroje, neověřená práva a neznámý stav přiznej; nevymýšlej dostupné schopnosti ani úspěšné dokončení.
- SSH na jiný Environment nebo zařízení jen na jeho tailnet hostname, s pinnutým host klíčem a po ověření aktivního tailnetu, nikdy na holou adresu \`100.64.0.x\` (\`manual/this-machine.md\`).
- Verzi Lazuria vlastní operátor: \`lazurio update\` spusť, když o to požádá; \`lazurio update status\` smíš kdykoli. Pin provozovatele hostingu (Lazurio Machines) je jen minimum a rollout verzi nikdy nesníží. Po aktualizaci obnoví tenhle Folder \`lazurio machine folder-refresh\`. Nástroje operátora (Codex, Claude Code, \`gh\`, Node, npm, Bun…) aktualizuj jen na výslovný pokyn Principála oficiálním instalátorem daného nástroje, jinak jen nahlas jejich verze (\`manual/troubleshooting.md\`, decisions 0161 a F17).
## Nástroje
Používej nejdřív tahle CLI z katalogu Lazuria, jak je popisuje \`manual/this-machine.md\`. Uvedený nástroj je kontext: neuděluje přístup, nic neinstaluje a nepinuje verzi.
- \`gh\` (povinný): GitHub CLI pro práci s repozitáři, pull requesty, issues a review.
MCP servery přicházejí na řadu až po CLI z katalogu: zjisti ve svém harnessu, které nabízí, a použij je tam, kde úkol žádné CLI z katalogu nepokrývá. Do Folderu se MCP servery nikdy nezapisují a dostupný server není souhlas s Publikací.
## Manuál
Úplný manuál pro agenty na tomhle Environmentu je v \`manual/\` (generuje ho produkt, needituj ho):
- [Lazurio](manual/lazurio.md) — co je Lazurio, model spolupráce a jeho hranice.
- [Tenhle Environment](manual/this-machine.md) — druh, Owner, preset, zóny, co kam smí, zapnuté nástroje a SSH na další Environmenty a zařízení.
- [Jak se tu pracuje](manual/working-here.md) — Draft, Publikace, worktrees, nálezy z review, handoff, otevřené otázky a kam patří poznatky.
- [Role](manual/roles.md) — Principál, Kolega, role v Organizaci, Owner, Buddy, Task Agent.
- [Slovník](manual/glossary.md) — pojmy, které agent na Environmentu potřebuje.
- [Řešení problémů](manual/troubleshooting.md) — aktualizace produktu a obsahu, identita Environmentu, odmítnutí a hlášení problémů.
"
`;

exports[`rendered AGENTS.md snapshot: hosted-organization-personal / en 1`] = `
"# Lazurio
<!-- base-instructions-15; {"preset":"hosted-organization-personal","profile":{"os":"linux","access":"remote","purpose":"human","locale":"en","detail":"concise","coordination":"direct"}} -->
## This Environment
- Preset: \`hosted-organization-personal\` (version 1).
- Name: \`workspace\` (workspace-vm).
- Owner: Organization \`example\`.
- Principal: the one operator the Organization assigned this work Remote Environment to. Agents act for them within their live rights.
- Tailnet: Headscale node \`example-workspace\`.
- Host: virtualization-host \`example-host\`; a higher administration and recovery domain than this Environment.
## Boundaries
- Personalspace: never present in an Organization-owned Environment. Do not create or mount one and never copy personal data or sign-ins here.
- Organizations: repositories live under \`organizations/<org>/\`; each Organization is its own access boundary and its own git repository.
- Identity: the Principal's own sign-ins; GitHub is the only access authority.
## How work is done here
- Communicate in English unless the user requests otherwise.
- Towards people, call the place you work in the Environment, and a hosted one a Remote Environment; do not say Machine, VM or server to them. Machine stays the technical term for the boundary an Environment runs on (commands such as \`lazurio machine …\`, identifiers, the architecture).
- Lead with the outcome and explain concisely.
- Work directly within task scope and available tools.
- Your work is a Draft in a worktree and a pull request; Publication (merge, deploy, send) belongs to the Principal and needs their explicit instruction in the current thread.
- File an open question, uncertainty or finding that cannot be resolved right away as a GitHub Issue in the exact owning repository, without asking first, and give its URL in the handoff. Before that, check for duplicates and remove secrets, Personalspace and Organization content that does not belong in that repository. Then continue with everything that does not depend on the answer; stop only where you cannot continue safely without it or where the decision belongs to the Principal. Do not close, assign or prioritize an issue without the Principal's instruction; plan, priority and responsibility belong in the Organization's Mission Control (\`manual/working-here.md\`).
- Take review findings with judgment. Fix a real defect at once: wrong behavior, a contradiction between texts, a claim without proof, a leak of sensitive content. Answer trivia without impact, speculation about a future change or a widening of the PR's scope not with another round of fixes but with a factual objection on the PR, and ask for a verdict on the unchanged head. If the reviewer still insists, put both positions to the Principal; never bypass the review or the branch rules.
- Before Organization work, load its current AGENTS.md under \`organizations/<org>/\`; the Organization's rules apply inside its checkout and this document does not replace them. Never work in a specific Organization from the Folder root.
- Verify the OS of the Environment you work in (linux); remote access changes neither identity nor permissions. Verify live identity and rights for connected operations; a local checkout is not proof of permission.
- A profile grants no access, publication mandate or background-work authority. Do not read another Principal's Personalspace or copy credentials.
- Preserve existing Organizations and Personalspace paths and content. Profile language neither renames folders nor translates user data.
- Report missing tools, unverified rights and unknown state; do not invent available capabilities or successful completion.
- SSH to another Environment or device only to its tailnet hostname, with a pinned host key and after verifying the active tailnet, never to a bare \`100.64.0.x\` address (\`manual/this-machine.md\`).
- The operator owns the version of Lazurio: run \`lazurio update\` when they ask for it; \`lazurio update status\` is free to use. The hosting operator's pin (Lazurio Machines) is only a minimum, and a rollout never lowers a version. After an update, \`lazurio machine folder-refresh\` refreshes this Folder. Update the operator's tools (Codex, Claude Code, \`gh\`, Node, npm, Bun…) only on the Principal's explicit instruction with that tool's official installer, otherwise only report their versions (\`manual/troubleshooting.md\`, decisions 0161 and F17).
## Tools
Use these CLIs of the Lazurio catalog first, as \`manual/this-machine.md\` describes them. A listed tool is context: it grants no access, installs nothing and pins no version.
- \`gh\` (required): GitHub CLI for work with repositories, pull requests, issues and reviews.
MCP servers come after the catalog CLIs: discover in your harness which ones it offers and use them where no catalog CLI covers the task. MCP servers are never recorded in the Folder, and an available server is not consent to Publication.
## Manual
The complete agent manual for this Environment is in \`manual/\` (generated by the product, do not edit):
- [Lazurio](manual/lazurio.md) — what Lazurio is, the collaboration model and its boundaries.
- [This Environment](manual/this-machine.md) — kind, Owner, preset, zones, what may reach what, enabled tools and SSH to other Environments and devices.
- [Working here](manual/working-here.md) — Draft, Publication, worktrees, review findings, handoff, open questions and where knowledge goes.
- [Roles](manual/roles.md) — Principal, Kolega, Organization roles, Owner, Buddy, Task Agent.
- [Glossary](manual/glossary.md) — the terms an agent in an Environment needs.
- [Troubleshooting](manual/troubleshooting.md) — product and content updates, the Environment's identity, refusals and reporting.
"
`;

exports[`rendered AGENTS.md snapshot: hosted-organization-team / cs 1`] = `
"# Lazurio
<!-- base-instructions-15; {"preset":"hosted-organization-team","profile":{"os":"linux","access":"remote","purpose":"human","locale":"cs","detail":"concise","coordination":"direct"}} -->
## Tenhle Environment
- Preset: \`hosted-organization-team\` (verze 1).
- Název: \`workspace\` (workspace-vm).
- Owner: Organizace \`example\`, Team \`sample-team\`.
- Principál: Kolega, který se právě připojil. OS účet je sdílený členy Teamu a není osoba; změny se připisují Teamu přes brokerovanou identitu Organizace.
- Tailnet: Headscale node \`example-workspace\`.
- Host: virtualization-host \`example-host\`; vyšší doména správy a obnovy než tenhle Environment.
## Hranice
- Personalspace: na Environmentu vlastněném Organizací nikdy není. Nezakládej ho, nemountuj ho a nekopíruj sem osobní data ani přihlášení.
- Organizace: repozitáře žijí v \`organizations/<org>/\`; každá Organizace je vlastní access hranice a vlastní git repozitář.
- Identita: brokerovaná identita Organizace s krátkodobými tokeny; žádná osobní přihlášení, session ani credentials sem nikdy nepatří.
## Jak se tu pracuje
- Komunikuj česky, pokud uživatel nepožádá jinak.
- Lidem říkej tomu, kde pracuješ, Environment (ten Environment, na tomto Environmentu) a hostovanému Remote Environment; slova Mašina, VM ani server jim neříkej. Machine zůstává technický pojem pro hranici, na které Environment běží (příkazy jako \`lazurio machine …\`, identifikátory, architektura).
- Začni výsledkem a vysvětluj stručně.
- Pracuj přímo v rozsahu zadání a dostupných nástrojů.
- Tvoje práce je Draft ve worktree a pull requestu; Publikace (merge, nasazení, odeslání) patří Principálovi a vyžaduje jeho explicitní pokyn v aktuálním threadu.
- Otevřenou otázku, nejistotu nebo nález, který nejde hned vyřešit, zapiš bez ptaní jako GitHub Issue do přesného owning repozitáře a jeho URL uveď v handoffu. Předtím zkontroluj duplicity a odstraň secrets, Personalspace a obsah Organizace, který do toho repozitáře nepatří. Pak pokračuj na všem, co na odpovědi nestojí; zastav se jen tam, kde bez ní nejde pokračovat bezpečně nebo kde rozhodnutí patří Principálovi. Issue bez pokynu Principála nezavírej, nepřiřazuj ani neprioritizuj; plán, priorita a odpovědnost patří do Mission Controlu Organizace (\`manual/working-here.md\`).
- Nálezy z review přijímej s úsudkem. Skutečnou vadu oprav hned: špatné chování, rozpor mezi texty, tvrzení bez důkazu, únik citlivého obsahu. Na drobnost bez dopadu, spekulaci o budoucí změně nebo rozšíření záběru PR neodpovídej dalším kolem oprav, ale věcnou námitkou v PR, a požádej o verdikt na nezměněném headu. Trvá-li reviewer na svém, předlož obě stanoviska Principálovi; review ani branch rules nikdy neobcházej.
- Před prací v Organizaci načti její aktuální AGENTS.md v \`organizations/<org>/\`; pravidla Organizace platí uvnitř jejího checkoutu a tenhle dokument je nenahrazuje. Z rootu Folderu se v konkrétní Organizaci nepracuje.
- Ověř systém Environmentu, na kterém pracuješ (linux); přístup remote nemění identitu ani oprávnění. Pro připojené operace ověř živou identitu a práva; lokální checkout není důkaz oprávnění.
- Profil neuděluje přístup, publikační mandát ani oprávnění k práci na pozadí. Nečti cizí Personalspace a nekopíruj přihlašovací údaje.
- Zachovej existující cesty a obsah Organizations a Personalspace. Jazyk profilu nepřejmenovává složky ani nepřekládá uživatelská data.
- Chybějící nástroje, neověřená práva a neznámý stav přiznej; nevymýšlej dostupné schopnosti ani úspěšné dokončení.
- SSH na jiný Environment nebo zařízení jen na jeho tailnet hostname, s pinnutým host klíčem a po ověření aktivního tailnetu, nikdy na holou adresu \`100.64.0.x\` (\`manual/this-machine.md\`).
- Verzi Lazuria vlastní operátor: \`lazurio update\` spusť, když o to požádá; \`lazurio update status\` smíš kdykoli. Pin provozovatele hostingu (Lazurio Machines) je jen minimum a rollout verzi nikdy nesníží. Po aktualizaci obnoví tenhle Folder \`lazurio machine folder-refresh\`. Nástroje operátora (Codex, Claude Code, \`gh\`, Node, npm, Bun…) aktualizuj jen na výslovný pokyn Principála oficiálním instalátorem daného nástroje, jinak jen nahlas jejich verze (\`manual/troubleshooting.md\`, decisions 0161 a F17).
## Nástroje
Používej nejdřív tahle CLI z katalogu Lazuria, jak je popisuje \`manual/this-machine.md\`. Uvedený nástroj je kontext: neuděluje přístup, nic neinstaluje a nepinuje verzi.
- \`gh\` (povinný): GitHub CLI pro práci s repozitáři, pull requesty, issues a review.
**Sdílený Environment:** účty přihlášené v nástrojích platí pro celý tenhle Environment a sdílí je všichni jeho Operátoři i jejich agenti. Přihlašuj tu jen účty, které mají být dostupné celému Teamu; osobní účet sem nepatří.
MCP servery přicházejí na řadu až po CLI z katalogu: zjisti ve svém harnessu, které nabízí, a použij je tam, kde úkol žádné CLI z katalogu nepokrývá. Do Folderu se MCP servery nikdy nezapisují a dostupný server není souhlas s Publikací.
## Manuál
Úplný manuál pro agenty na tomhle Environmentu je v \`manual/\` (generuje ho produkt, needituj ho):
- [Lazurio](manual/lazurio.md) — co je Lazurio, model spolupráce a jeho hranice.
- [Tenhle Environment](manual/this-machine.md) — druh, Owner, preset, zóny, co kam smí, zapnuté nástroje a SSH na další Environmenty a zařízení.
- [Jak se tu pracuje](manual/working-here.md) — Draft, Publikace, worktrees, nálezy z review, handoff, otevřené otázky a kam patří poznatky.
- [Role](manual/roles.md) — Principál, Kolega, role v Organizaci, Owner, Buddy, Task Agent.
- [Slovník](manual/glossary.md) — pojmy, které agent na Environmentu potřebuje.
- [Řešení problémů](manual/troubleshooting.md) — aktualizace produktu a obsahu, identita Environmentu, odmítnutí a hlášení problémů.
"
`;

exports[`rendered AGENTS.md snapshot: hosted-organization-team / en 1`] = `
"# Lazurio
<!-- base-instructions-15; {"preset":"hosted-organization-team","profile":{"os":"linux","access":"remote","purpose":"human","locale":"en","detail":"concise","coordination":"direct"}} -->
## This Environment
- Preset: \`hosted-organization-team\` (version 1).
- Name: \`workspace\` (workspace-vm).
- Owner: Organization \`example\`, Team \`sample-team\`.
- Principal: whichever Team member is connected now. The OS account is shared by the Team and is not a person; changes are attributed to the Team through the brokered Organization identity.
- Tailnet: Headscale node \`example-workspace\`.
- Host: virtualization-host \`example-host\`; a higher administration and recovery domain than this Environment.
## Boundaries
- Personalspace: never present in an Organization-owned Environment. Do not create or mount one and never copy personal data or sign-ins here.
- Organizations: repositories live under \`organizations/<org>/\`; each Organization is its own access boundary and its own git repository.
- Identity: the brokered Organization identity with short-lived tokens; no personal sign-ins, sessions or credentials ever belong here.
## How work is done here
- Communicate in English unless the user requests otherwise.
- Towards people, call the place you work in the Environment, and a hosted one a Remote Environment; do not say Machine, VM or server to them. Machine stays the technical term for the boundary an Environment runs on (commands such as \`lazurio machine …\`, identifiers, the architecture).
- Lead with the outcome and explain concisely.
- Work directly within task scope and available tools.
- Your work is a Draft in a worktree and a pull request; Publication (merge, deploy, send) belongs to the Principal and needs their explicit instruction in the current thread.
- File an open question, uncertainty or finding that cannot be resolved right away as a GitHub Issue in the exact owning repository, without asking first, and give its URL in the handoff. Before that, check for duplicates and remove secrets, Personalspace and Organization content that does not belong in that repository. Then continue with everything that does not depend on the answer; stop only where you cannot continue safely without it or where the decision belongs to the Principal. Do not close, assign or prioritize an issue without the Principal's instruction; plan, priority and responsibility belong in the Organization's Mission Control (\`manual/working-here.md\`).
- Take review findings with judgment. Fix a real defect at once: wrong behavior, a contradiction between texts, a claim without proof, a leak of sensitive content. Answer trivia without impact, speculation about a future change or a widening of the PR's scope not with another round of fixes but with a factual objection on the PR, and ask for a verdict on the unchanged head. If the reviewer still insists, put both positions to the Principal; never bypass the review or the branch rules.
- Before Organization work, load its current AGENTS.md under \`organizations/<org>/\`; the Organization's rules apply inside its checkout and this document does not replace them. Never work in a specific Organization from the Folder root.
- Verify the OS of the Environment you work in (linux); remote access changes neither identity nor permissions. Verify live identity and rights for connected operations; a local checkout is not proof of permission.
- A profile grants no access, publication mandate or background-work authority. Do not read another Principal's Personalspace or copy credentials.
- Preserve existing Organizations and Personalspace paths and content. Profile language neither renames folders nor translates user data.
- Report missing tools, unverified rights and unknown state; do not invent available capabilities or successful completion.
- SSH to another Environment or device only to its tailnet hostname, with a pinned host key and after verifying the active tailnet, never to a bare \`100.64.0.x\` address (\`manual/this-machine.md\`).
- The operator owns the version of Lazurio: run \`lazurio update\` when they ask for it; \`lazurio update status\` is free to use. The hosting operator's pin (Lazurio Machines) is only a minimum, and a rollout never lowers a version. After an update, \`lazurio machine folder-refresh\` refreshes this Folder. Update the operator's tools (Codex, Claude Code, \`gh\`, Node, npm, Bun…) only on the Principal's explicit instruction with that tool's official installer, otherwise only report their versions (\`manual/troubleshooting.md\`, decisions 0161 and F17).
## Tools
Use these CLIs of the Lazurio catalog first, as \`manual/this-machine.md\` describes them. A listed tool is context: it grants no access, installs nothing and pins no version.
- \`gh\` (required): GitHub CLI for work with repositories, pull requests, issues and reviews.
**Shared Environment:** accounts signed in to the tools apply to this whole Environment and are shared by all its operators and their agents. Sign in only accounts meant for the whole Team; a personal account does not belong here.
MCP servers come after the catalog CLIs: discover in your harness which ones it offers and use them where no catalog CLI covers the task. MCP servers are never recorded in the Folder, and an available server is not consent to Publication.
## Manual
The complete agent manual for this Environment is in \`manual/\` (generated by the product, do not edit):
- [Lazurio](manual/lazurio.md) — what Lazurio is, the collaboration model and its boundaries.
- [This Environment](manual/this-machine.md) — kind, Owner, preset, zones, what may reach what, enabled tools and SSH to other Environments and devices.
- [Working here](manual/working-here.md) — Draft, Publication, worktrees, review findings, handoff, open questions and where knowledge goes.
- [Roles](manual/roles.md) — Principal, Kolega, Organization roles, Owner, Buddy, Task Agent.
- [Glossary](manual/glossary.md) — the terms an agent in an Environment needs.
- [Troubleshooting](manual/troubleshooting.md) — product and content updates, the Environment's identity, refusals and reporting.
"
`;

exports[`relationships render only when the recorded binding carries them, one line per peer 1`] = `
"# Lazurio
<!-- base-instructions-15; {"preset":"hosted-personal","profile":{"os":"linux","access":"remote","purpose":"human","locale":"en","detail":"concise","coordination":"direct"}} -->
## This Environment
- Preset: \`hosted-personal\` (version 1).
- Name: \`example\` (personal-vm).
- Owner: the Principal with GitHub login \`example\` (id 12345). This is their one personal Remote Environment.
- Principal: the Owner of this Environment. Agents here act for them within their rights; a Buddy is an optional resident of this same Environment.
- Tailnet: Headscale node \`example\`.
- Host: provider-estate \`example-estate\`; a higher administration and recovery domain than this Environment.
### Tailnet peers
Tailnet peers as the handover records them (this Environment is in the personal zone); Headscale enforces them, Lazurio does not.
- \`example-laptop\` (client device, personal zone): SSH both ways with \`example-laptop.tailnet.example.invalid\`; no HTTPS.
- \`example-workspace\` (work Remote Environment, work zone, Organization \`example\`): SSH from here to \`example-workspace.tailnet.example.invalid\` as \`operator\`; HTTPS \`launchpad.example-workspace.example.lazurio.io\`.
## Boundaries
- Personalspace: \`personalspace/\` is the intimate space of exactly one Principal and their optional Buddy. Nobody else reads it and it is never shared.
- Organizations: no Organization repositories are mounted in a personal Remote Environment. Organization work (code, repositories, runs) happens over SSH in a work Remote Environment the Principal confirms is assigned to them; never clone Organization repositories here.
- Identity: the Principal's own sign-ins; GitHub is the only access authority.
## How work is done here
- Communicate in English unless the user requests otherwise.
- Towards people, call the place you work in the Environment, and a hosted one a Remote Environment; do not say Machine, VM or server to them. Machine stays the technical term for the boundary an Environment runs on (commands such as \`lazurio machine …\`, identifiers, the architecture).
- Lead with the outcome and explain concisely.
- Work directly within task scope and available tools.
- Your work is a Draft in a worktree and a pull request; Publication (merge, deploy, send) belongs to the Principal and needs their explicit instruction in the current thread.
- File an open question, uncertainty or finding that cannot be resolved right away as a GitHub Issue in the exact owning repository, without asking first, and give its URL in the handoff. Before that, check for duplicates and remove secrets, Personalspace and Organization content that does not belong in that repository. Then continue with everything that does not depend on the answer; stop only where you cannot continue safely without it or where the decision belongs to the Principal. Do not close, assign or prioritize an issue without the Principal's instruction; plan, priority and responsibility belong in the Organization's Mission Control (\`manual/working-here.md\`).
- Take review findings with judgment. Fix a real defect at once: wrong behavior, a contradiction between texts, a claim without proof, a leak of sensitive content. Answer trivia without impact, speculation about a future change or a widening of the PR's scope not with another round of fixes but with a factual objection on the PR, and ask for a verdict on the unchanged head. If the reviewer still insists, put both positions to the Principal; never bypass the review or the branch rules.
- Before Organization work, load its current AGENTS.md under \`organizations/<org>/\`; the Organization's rules apply inside its checkout and this document does not replace them. Never work in a specific Organization from the Folder root.
- Verify the OS of the Environment you work in (linux); remote access changes neither identity nor permissions. Verify live identity and rights for connected operations; a local checkout is not proof of permission.
- A profile grants no access, publication mandate or background-work authority. Do not read another Principal's Personalspace or copy credentials.
- Preserve existing Organizations and Personalspace paths and content. Profile language neither renames folders nor translates user data.
- Report missing tools, unverified rights and unknown state; do not invent available capabilities or successful completion.
- SSH to another Environment or device only to its tailnet hostname, with a pinned host key and after verifying the active tailnet, never to a bare \`100.64.0.x\` address (\`manual/this-machine.md\`).
- The operator owns the version of Lazurio: run \`lazurio update\` when they ask for it; \`lazurio update status\` is free to use. The hosting operator's pin (Lazurio Machines) is only a minimum, and a rollout never lowers a version. After an update, \`lazurio machine folder-refresh\` refreshes this Folder. Update the operator's tools (Codex, Claude Code, \`gh\`, Node, npm, Bun…) only on the Principal's explicit instruction with that tool's official installer, otherwise only report their versions (\`manual/troubleshooting.md\`, decisions 0161 and F17).
## Tools
Use these CLIs of the Lazurio catalog first, as \`manual/this-machine.md\` describes them. A listed tool is context: it grants no access, installs nothing and pins no version.
- \`gh\` (required): GitHub CLI for work with repositories, pull requests, issues and reviews.
MCP servers come after the catalog CLIs: discover in your harness which ones it offers and use them where no catalog CLI covers the task. MCP servers are never recorded in the Folder, and an available server is not consent to Publication.
## Manual
The complete agent manual for this Environment is in \`manual/\` (generated by the product, do not edit):
- [Lazurio](manual/lazurio.md) — what Lazurio is, the collaboration model and its boundaries.
- [This Environment](manual/this-machine.md) — kind, Owner, preset, zones, what may reach what, enabled tools and SSH to other Environments and devices.
- [Working here](manual/working-here.md) — Draft, Publication, worktrees, review findings, handoff, open questions and where knowledge goes.
- [Roles](manual/roles.md) — Principal, Kolega, Organization roles, Owner, Buddy, Task Agent.
- [Glossary](manual/glossary.md) — the terms an agent in an Environment needs.
- [Troubleshooting](manual/troubleshooting.md) — product and content updates, the Environment's identity, refusals and reporting.
"
`;

exports[`the Assignment line renders the handover's owner.assignment and nothing else 1`] = `
"# Lazurio
<!-- base-instructions-15; {"preset":"hosted-organization-personal","profile":{"os":"linux","access":"remote","purpose":"human","locale":"en","detail":"concise","coordination":"direct"}} -->
## This Environment
- Preset: \`hosted-organization-personal\` (version 1).
- Name: \`workspace\` (workspace-vm).
- Owner: Organization \`example\`.
- Assignment: assigned to operator \`example\` (GitHub id 12345).
- Principal: the one operator the Organization assigned this work Remote Environment to. Agents act for them within their live rights.
- Tailnet: Headscale node \`example-workspace\`.
- Host: virtualization-host \`example-host\`; a higher administration and recovery domain than this Environment.
## Boundaries
- Personalspace: never present in an Organization-owned Environment. Do not create or mount one and never copy personal data or sign-ins here.
- Organizations: repositories live under \`organizations/<org>/\`; each Organization is its own access boundary and its own git repository.
- Identity: the Principal's own sign-ins; GitHub is the only access authority.
## How work is done here
- Communicate in English unless the user requests otherwise.
- Towards people, call the place you work in the Environment, and a hosted one a Remote Environment; do not say Machine, VM or server to them. Machine stays the technical term for the boundary an Environment runs on (commands such as \`lazurio machine …\`, identifiers, the architecture).
- Lead with the outcome and explain concisely.
- Work directly within task scope and available tools.
- Your work is a Draft in a worktree and a pull request; Publication (merge, deploy, send) belongs to the Principal and needs their explicit instruction in the current thread.
- File an open question, uncertainty or finding that cannot be resolved right away as a GitHub Issue in the exact owning repository, without asking first, and give its URL in the handoff. Before that, check for duplicates and remove secrets, Personalspace and Organization content that does not belong in that repository. Then continue with everything that does not depend on the answer; stop only where you cannot continue safely without it or where the decision belongs to the Principal. Do not close, assign or prioritize an issue without the Principal's instruction; plan, priority and responsibility belong in the Organization's Mission Control (\`manual/working-here.md\`).
- Take review findings with judgment. Fix a real defect at once: wrong behavior, a contradiction between texts, a claim without proof, a leak of sensitive content. Answer trivia without impact, speculation about a future change or a widening of the PR's scope not with another round of fixes but with a factual objection on the PR, and ask for a verdict on the unchanged head. If the reviewer still insists, put both positions to the Principal; never bypass the review or the branch rules.
- Before Organization work, load its current AGENTS.md under \`organizations/<org>/\`; the Organization's rules apply inside its checkout and this document does not replace them. Never work in a specific Organization from the Folder root.
- Verify the OS of the Environment you work in (linux); remote access changes neither identity nor permissions. Verify live identity and rights for connected operations; a local checkout is not proof of permission.
- A profile grants no access, publication mandate or background-work authority. Do not read another Principal's Personalspace or copy credentials.
- Preserve existing Organizations and Personalspace paths and content. Profile language neither renames folders nor translates user data.
- Report missing tools, unverified rights and unknown state; do not invent available capabilities or successful completion.
- SSH to another Environment or device only to its tailnet hostname, with a pinned host key and after verifying the active tailnet, never to a bare \`100.64.0.x\` address (\`manual/this-machine.md\`).
- The operator owns the version of Lazurio: run \`lazurio update\` when they ask for it; \`lazurio update status\` is free to use. The hosting operator's pin (Lazurio Machines) is only a minimum, and a rollout never lowers a version. After an update, \`lazurio machine folder-refresh\` refreshes this Folder. Update the operator's tools (Codex, Claude Code, \`gh\`, Node, npm, Bun…) only on the Principal's explicit instruction with that tool's official installer, otherwise only report their versions (\`manual/troubleshooting.md\`, decisions 0161 and F17).
## Tools
Use these CLIs of the Lazurio catalog first, as \`manual/this-machine.md\` describes them. A listed tool is context: it grants no access, installs nothing and pins no version.
- \`gh\` (required): GitHub CLI for work with repositories, pull requests, issues and reviews.
MCP servers come after the catalog CLIs: discover in your harness which ones it offers and use them where no catalog CLI covers the task. MCP servers are never recorded in the Folder, and an available server is not consent to Publication.
## Manual
The complete agent manual for this Environment is in \`manual/\` (generated by the product, do not edit):
- [Lazurio](manual/lazurio.md) — what Lazurio is, the collaboration model and its boundaries.
- [This Environment](manual/this-machine.md) — kind, Owner, preset, zones, what may reach what, enabled tools and SSH to other Environments and devices.
- [Working here](manual/working-here.md) — Draft, Publication, worktrees, review findings, handoff, open questions and where knowledge goes.
- [Roles](manual/roles.md) — Principal, Kolega, Organization roles, Owner, Buddy, Task Agent.
- [Glossary](manual/glossary.md) — the terms an agent in an Environment needs.
- [Troubleshooting](manual/troubleshooting.md) — product and content updates, the Environment's identity, refusals and reporting.
"
`;

exports[`the Assignment line renders the handover's owner.assignment and nothing else 2`] = `
"# Lazurio
<!-- base-instructions-15; {"preset":"hosted-organization-team","profile":{"os":"linux","access":"remote","purpose":"human","locale":"en","detail":"concise","coordination":"direct"}} -->
## This Environment
- Preset: \`hosted-organization-team\` (version 1).
- Name: \`workspace\` (workspace-vm).
- Owner: Organization \`example\`, Team \`sample-team\`.
- Assignment: shared by the Team.
- Principal: whichever Team member is connected now. The OS account is shared by the Team and is not a person; changes are attributed to the Team through the brokered Organization identity.
- Tailnet: Headscale node \`example-workspace\`.
- Host: virtualization-host \`example-host\`; a higher administration and recovery domain than this Environment.
## Boundaries
- Personalspace: never present in an Organization-owned Environment. Do not create or mount one and never copy personal data or sign-ins here.
- Organizations: repositories live under \`organizations/<org>/\`; each Organization is its own access boundary and its own git repository.
- Identity: the brokered Organization identity with short-lived tokens; no personal sign-ins, sessions or credentials ever belong here.
## How work is done here
- Communicate in English unless the user requests otherwise.
- Towards people, call the place you work in the Environment, and a hosted one a Remote Environment; do not say Machine, VM or server to them. Machine stays the technical term for the boundary an Environment runs on (commands such as \`lazurio machine …\`, identifiers, the architecture).
- Lead with the outcome and explain concisely.
- Work directly within task scope and available tools.
- Your work is a Draft in a worktree and a pull request; Publication (merge, deploy, send) belongs to the Principal and needs their explicit instruction in the current thread.
- File an open question, uncertainty or finding that cannot be resolved right away as a GitHub Issue in the exact owning repository, without asking first, and give its URL in the handoff. Before that, check for duplicates and remove secrets, Personalspace and Organization content that does not belong in that repository. Then continue with everything that does not depend on the answer; stop only where you cannot continue safely without it or where the decision belongs to the Principal. Do not close, assign or prioritize an issue without the Principal's instruction; plan, priority and responsibility belong in the Organization's Mission Control (\`manual/working-here.md\`).
- Take review findings with judgment. Fix a real defect at once: wrong behavior, a contradiction between texts, a claim without proof, a leak of sensitive content. Answer trivia without impact, speculation about a future change or a widening of the PR's scope not with another round of fixes but with a factual objection on the PR, and ask for a verdict on the unchanged head. If the reviewer still insists, put both positions to the Principal; never bypass the review or the branch rules.
- Before Organization work, load its current AGENTS.md under \`organizations/<org>/\`; the Organization's rules apply inside its checkout and this document does not replace them. Never work in a specific Organization from the Folder root.
- Verify the OS of the Environment you work in (linux); remote access changes neither identity nor permissions. Verify live identity and rights for connected operations; a local checkout is not proof of permission.
- A profile grants no access, publication mandate or background-work authority. Do not read another Principal's Personalspace or copy credentials.
- Preserve existing Organizations and Personalspace paths and content. Profile language neither renames folders nor translates user data.
- Report missing tools, unverified rights and unknown state; do not invent available capabilities or successful completion.
- SSH to another Environment or device only to its tailnet hostname, with a pinned host key and after verifying the active tailnet, never to a bare \`100.64.0.x\` address (\`manual/this-machine.md\`).
- The operator owns the version of Lazurio: run \`lazurio update\` when they ask for it; \`lazurio update status\` is free to use. The hosting operator's pin (Lazurio Machines) is only a minimum, and a rollout never lowers a version. After an update, \`lazurio machine folder-refresh\` refreshes this Folder. Update the operator's tools (Codex, Claude Code, \`gh\`, Node, npm, Bun…) only on the Principal's explicit instruction with that tool's official installer, otherwise only report their versions (\`manual/troubleshooting.md\`, decisions 0161 and F17).
## Tools
Use these CLIs of the Lazurio catalog first, as \`manual/this-machine.md\` describes them. A listed tool is context: it grants no access, installs nothing and pins no version.
- \`gh\` (required): GitHub CLI for work with repositories, pull requests, issues and reviews.
**Shared Environment:** accounts signed in to the tools apply to this whole Environment and are shared by all its operators and their agents. Sign in only accounts meant for the whole Team; a personal account does not belong here.
MCP servers come after the catalog CLIs: discover in your harness which ones it offers and use them where no catalog CLI covers the task. MCP servers are never recorded in the Folder, and an available server is not consent to Publication.
## Manual
The complete agent manual for this Environment is in \`manual/\` (generated by the product, do not edit):
- [Lazurio](manual/lazurio.md) — what Lazurio is, the collaboration model and its boundaries.
- [This Environment](manual/this-machine.md) — kind, Owner, preset, zones, what may reach what, enabled tools and SSH to other Environments and devices.
- [Working here](manual/working-here.md) — Draft, Publication, worktrees, review findings, handoff, open questions and where knowledge goes.
- [Roles](manual/roles.md) — Principal, Kolega, Organization roles, Owner, Buddy, Task Agent.
- [Glossary](manual/glossary.md) — the terms an agent in an Environment needs.
- [Troubleshooting](manual/troubleshooting.md) — product and content updates, the Environment's identity, refusals and reporting.
"
`;

exports[`the Owner line names the Team only under hosted-organization-team 1`] = `
"# Lazurio
<!-- base-instructions-15; {"preset":"hosted-organization-personal","profile":{"os":"linux","access":"remote","purpose":"human","locale":"en","detail":"concise","coordination":"direct"}} -->
## This Environment
- Preset: \`hosted-organization-personal\` (version 1).
- Name: \`workspace\` (workspace-vm).
- Owner: Organization \`example\`.
- Principal: the one operator the Organization assigned this work Remote Environment to. Agents act for them within their live rights.
- Tailnet: Headscale node \`example-workspace\`.
- Host: virtualization-host \`example-host\`; a higher administration and recovery domain than this Environment.
## Boundaries
- Personalspace: never present in an Organization-owned Environment. Do not create or mount one and never copy personal data or sign-ins here.
- Organizations: repositories live under \`organizations/<org>/\`; each Organization is its own access boundary and its own git repository.
- Identity: the Principal's own sign-ins; GitHub is the only access authority.
## How work is done here
- Communicate in English unless the user requests otherwise.
- Towards people, call the place you work in the Environment, and a hosted one a Remote Environment; do not say Machine, VM or server to them. Machine stays the technical term for the boundary an Environment runs on (commands such as \`lazurio machine …\`, identifiers, the architecture).
- Lead with the outcome and explain concisely.
- Work directly within task scope and available tools.
- Your work is a Draft in a worktree and a pull request; Publication (merge, deploy, send) belongs to the Principal and needs their explicit instruction in the current thread.
- File an open question, uncertainty or finding that cannot be resolved right away as a GitHub Issue in the exact owning repository, without asking first, and give its URL in the handoff. Before that, check for duplicates and remove secrets, Personalspace and Organization content that does not belong in that repository. Then continue with everything that does not depend on the answer; stop only where you cannot continue safely without it or where the decision belongs to the Principal. Do not close, assign or prioritize an issue without the Principal's instruction; plan, priority and responsibility belong in the Organization's Mission Control (\`manual/working-here.md\`).
- Take review findings with judgment. Fix a real defect at once: wrong behavior, a contradiction between texts, a claim without proof, a leak of sensitive content. Answer trivia without impact, speculation about a future change or a widening of the PR's scope not with another round of fixes but with a factual objection on the PR, and ask for a verdict on the unchanged head. If the reviewer still insists, put both positions to the Principal; never bypass the review or the branch rules.
- Before Organization work, load its current AGENTS.md under \`organizations/<org>/\`; the Organization's rules apply inside its checkout and this document does not replace them. Never work in a specific Organization from the Folder root.
- Verify the OS of the Environment you work in (linux); remote access changes neither identity nor permissions. Verify live identity and rights for connected operations; a local checkout is not proof of permission.
- A profile grants no access, publication mandate or background-work authority. Do not read another Principal's Personalspace or copy credentials.
- Preserve existing Organizations and Personalspace paths and content. Profile language neither renames folders nor translates user data.
- Report missing tools, unverified rights and unknown state; do not invent available capabilities or successful completion.
- SSH to another Environment or device only to its tailnet hostname, with a pinned host key and after verifying the active tailnet, never to a bare \`100.64.0.x\` address (\`manual/this-machine.md\`).
- The operator owns the version of Lazurio: run \`lazurio update\` when they ask for it; \`lazurio update status\` is free to use. The hosting operator's pin (Lazurio Machines) is only a minimum, and a rollout never lowers a version. After an update, \`lazurio machine folder-refresh\` refreshes this Folder. Update the operator's tools (Codex, Claude Code, \`gh\`, Node, npm, Bun…) only on the Principal's explicit instruction with that tool's official installer, otherwise only report their versions (\`manual/troubleshooting.md\`, decisions 0161 and F17).
## Tools
Use these CLIs of the Lazurio catalog first, as \`manual/this-machine.md\` describes them. A listed tool is context: it grants no access, installs nothing and pins no version.
- \`gh\` (required): GitHub CLI for work with repositories, pull requests, issues and reviews.
MCP servers come after the catalog CLIs: discover in your harness which ones it offers and use them where no catalog CLI covers the task. MCP servers are never recorded in the Folder, and an available server is not consent to Publication.
## Manual
The complete agent manual for this Environment is in \`manual/\` (generated by the product, do not edit):
- [Lazurio](manual/lazurio.md) — what Lazurio is, the collaboration model and its boundaries.
- [This Environment](manual/this-machine.md) — kind, Owner, preset, zones, what may reach what, enabled tools and SSH to other Environments and devices.
- [Working here](manual/working-here.md) — Draft, Publication, worktrees, review findings, handoff, open questions and where knowledge goes.
- [Roles](manual/roles.md) — Principal, Kolega, Organization roles, Owner, Buddy, Task Agent.
- [Glossary](manual/glossary.md) — the terms an agent in an Environment needs.
- [Troubleshooting](manual/troubleshooting.md) — product and content updates, the Environment's identity, refusals and reporting.
"
`;
